# qc-tool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: format_lint_and_test.yml
src/qc_tool/: app_state.py  callback_queue.py  code.py  data_transformation.py  feedback_service.py  file_handler.py  filtered_profiles_slot.py  flag_info.py  layoutable.py  main.html  main.py  manual_qc_handler.py  map.py  metadata_qc_handler.py  new_profile_slot.py  parameter_handler.py  parameter_slot.py  profile_slot.py  profile_tab_handler.py  protocols.py  scatter_slot.py  station.py  station_info.py  visit.py  widgets.html  widgets.py
src/qc_tool/controllers/: comment_dialog_controller.py  file_controller.py  filter_controller.py  filtered_profiles_controller.py  main_controller.py  manual_qc_controller.py  map_controller.py  parameter_selector_controller.py  profile_grid_controller.py  profiles_controller.py  scatter_controller.py  summary_controller.py  validation_log_controller.py  visit_info_controller.py  visit_selector_controller.py  visits_browser_controller.py  visits_controller.py
src/qc_tool/models/: base_model.py  file_model.py  filter_model.py  filtered_profiles_model.py  geo_info_model.py  manual_qc_model.py  map_model.py  parameters_model.py  profiles_grid_model.py  scatter_model.py  validation_log_model.py  visits_model.py
src/qc_tool/scripts/: start_server.py
src/qc_tool/static/: station_navigator.py
src/qc_tool/static/css/: style.css
src/qc_tool/views/: base_view.py  comment_dialog_view.py  file_view.py  filter_view.py  filtered_profiles_view.py  help_view.py  main_view.py  manual_qc_view.py  map_view.py  parameter_selector_view.py  profile_grid_view.py  profiles_view.py  scatter_view.py  summary_view.py  validation_log_view.py  visit_info_view.py  visit_selector_view.py  visits_browser_view.py
test_data/: mapping_parameter.csv
tests/: test_comment_dialog_controller.py  test_data_transformation.py  test_main.py  test_manual_qc_model.py  test_station.py
tests/controllers/: test_comment_dialog_controller.py
tests/models/: test_manual_qc_model.py
