[project]
name = "qc-tool"
version = "2025.2.1"
description = "Kvalitetskontroll av lågupplöst data"
authors = [
    {name = "Jonatan Skogsfors", email = "jonatan.skogsfors@smhi.se"},
    {name = "Lena Viktorsson", email = "lena.viktorsson@smhi.se"},
]
dependencies = [
    "bokeh==3.7.3",
    "pyproj==3.7.1",
    "pandas>=2.2.1",
    "nodc-statistics @ git+https://github.com/nodc-sweden/nodc-statistics@v2025.1.0",
    "sharkadm @ git+https://github.com/nodc-sweden/SHARKadm@with-nodc-station",
    "nodc-codes @ git+https://github.com/nodc-sweden/nodc-codes@v0.3.0",
    "ocean-data-qc @ git+https://github.com/nodc-sweden/ocean-data-qc@v2025.1.1",
    "Jinja2>=3.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
[project.gui-scripts]
qc-tool  = "qc_tool.scripts.start_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "F",  # pyflakes
    "E",  # pycodestyle: error
    "W",  # pycodestyle: warning
    "I",  # isort
    "RUF"  # Ruff-specific rules
]
